// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown it passes the passes provided props to the Select component 1`] = `
<DocumentFragment>
  <div
    class="dropdown classNamePrefix--is-disabled css-3iigni-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      aria-disabled="true"
      class="classNamePrefix__control classNamePrefix__control--is-disabled css-uuqjpg-Control"
    >
      <button>
        label2
        <div
          class="classNamePrefix__value-container classNamePrefix__value-container--has-value css-1fdsijx-ValueContainer"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            aria-readonly="true"
            class="css-mohuvp-dummyInput-DummyInput"
            disabled=""
            id="react-select-4-input"
            inputmode="none"
            role="combobox"
            tabindex="0"
            value=""
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown it renders with default props correctly 1`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class=" css-uuqjpg-Control"
    >
      <button>
        placeholder
        <div
          class=" css-1fdsijx-ValueContainer"
        >
          <div
            class=" css-1jqq78o-placeholder"
            id="react-select-3-placeholder"
          />
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-3-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            aria-readonly="true"
            class="css-mohuvp-dummyInput-DummyInput"
            id="react-select-3-input"
            inputmode="none"
            role="combobox"
            tabindex="0"
            value=""
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
